plugins {
    id 'java-library'
}

group = 'com.optivem'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // From optivem-lang
    compileOnly 'org.projectlombok:lombok:1.18.38'
    annotationProcessor 'org.projectlombok:lombok:1.18.38'
    
    // From optivem-http
    api 'com.fasterxml.jackson.core:jackson-databind:2.17.0'
    api 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.17.0'
    implementation 'org.springframework:spring-web:6.1.5'
    
    // From optivem-playwright  
    api 'com.microsoft.playwright:playwright:1.44.0'
    api 'org.junit.jupiter:junit-jupiter-api:5.10.2'
    api 'org.junit.jupiter:junit-jupiter-engine:5.10.2'
    api 'org.slf4j:slf4j-api:2.0.9'
    
    // From optivem-testing-assertions
    api 'org.assertj:assertj-core:3.25.3'
    
    // From optivem-wiremock
    api 'org.wiremock:wiremock-standalone:3.10.0'
}

tasks.named('test') {
    useJUnitPlatform()
}